# flatpak-builder-tools

./: .gitignore  CODEOWNERS  flatpak-json2yaml.py  git_source_update.py  readme.md
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: bug_template.yml
.github/workflows/: cargo.yml  deno.yml  dotnet.yml  label.yml  node.yaml  pip.yml  poetry.yml  publish-jsr.yml
cargo/: README.md  cargo-config.toml  flatpak-cargo-generator.py  pyproject.toml
cargo/quickstart/: com.flatpak.quickstart.json
cpan/: README.md  flatpak-cpan-generator.pl
deno/: README.md  deno.json
deno/src/: main.ts  utils.ts
deno/tests/: main.test.ts  main_function.test.ts  repro_hashing.test.ts  utils.test.ts
dotnet/: README.md  flatpak-dotnet-generator.py  pyproject.toml
dub/: README.md  flatpak-dub-generator.py
go/: README.md  flatpak-go-deps.py  requirements.txt
go-get/: .gitignore  README.md  flatpak-go-get-generator.py  flatpak-go-vendor-generator.py
go-modules/: README.md
gradle/: README.md  flatpak-gradle-generator.py
maven/: README.md  flatpak-maven-generator.py  readme.md
node/: .gitignore  README.md  flatpak-node-generator.py  pyproject.toml  requirements.txt
node/fiddle-yarn-berry/: .gitignore  README.md  gen.sh  org.electronjs.fiddle.yaml
node/fiddle-yarn-berry/replace/: contributors.json  fetch-releases.ts
node/flatpak_node_generator/: cache.py  electron.py  flatpak-yarn.js  integrity.py  main.py  manifest.py  node_headers.py  package.py  populate_pnpm_store.py  progress.py  requests.py  url_metadata.py
node/flatpak_node_generator/providers/: __init__.py  npm.py  pnpm.py  special.py  yarn.py
node/tests/: conftest.py  test_cache.py  test_electron.py  test_integrity.py  test_manifest.py  test_npm.py  test_package.py  test_pnpm.py  test_populate_pnpm_store.py  test_providers.py  test_requests.py  test_yarn.py  test_yarn_lock_8.py
node/tools/: lockfile-utils.sh  setup-local-registry.sh
node/vanilla-quick-start/: README.md  generated-sources.json  org.electronjs.ElectronQuickStart.yaml
node/webpack-quick-start/: README.md  build.electron.webpack.ElectronWebpackQuickStart.yaml  generated-sources.json
npm/: README.md  flatpak-npm-generator.py
pip/: flatpak-pip-generator  flatpak-pip-generator-version-choices  flatpak-pip-generator.py  flatpak_pip_generator.py  pip-resolve.py  pyproject.toml  readme.md
pip/src/flatpak_pip_generator/: __init__.py
poetry/: flatpak-poetry-generator.py  pyproject.toml  readme.md
rubygems/: README.md
spm/: README.md  flatpak-spm-generator.swift
spm/quickstart/: com.flatpak.quickstart.json  org.flatpak.quickstart.json
spm/quickstart/Sources/quickstart/: main.swift
yarn/: README.md  flatpak-yarn-generator.py
