[tool.poetry]
package-mode = false

[project]
name = "flatpak_cargo_generator"
version = "0.0.1"
description = "Script to generate flatpak-builder manifest from Cargo lockfiles"
license = {text = "MIT"}
readme = "README.md"
requires-python = "<4.0,>=3.8"
dependencies = [
    "aiohttp<4.0.0,>=3.9.5",
    "toml<1.0.0,>=0.10.2",
    "PyYAML<7.0.0,>=6.0.2",
]
