[project]
name = "flatpak_node_generator"
version = "0.1.0"
description = "Script to generate Flatpak manifests from NPM and Yarn lockfiles"
license = {text = "MIT"}
readme = "README.md"
authors = [
  {name = "Ryan Gonzalez", email = "ryan.gonzalez@collabora.com"},
  {name = "Filippe LeMarchand", email = "gasinvein@gmail.com"},
]
requires-python = "<4.0,>=3.9"
dependencies = [
    "aiohttp<4.0.0,>=3.9.0",
]

[tool.poetry.group.dev.dependencies]
blue = {git = "https://github.com/grantjenks/blue"}
isort = "^6.0.1"
mypy = "^1.11.2"
poethepoet = "^0.34.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-datadir = "^1.6.1"
pytest-httpserver = "^1.1.3"
pytest-xdist = "^3.6.1"

[tool.poetry.scripts]
flatpak-node-generator = "flatpak_node_generator.main:main"

[tool.blue]
line-length = 88
target-version = ["py39"]

[tool.isort]
from_first = true
lines_between_types = 1
profile = "black"
src_paths = ["flatpak_node_generator", "tests"]

[tool.mypy]
python_version = "3.9"
exclude = "^(.*/)?((([^/]+)-quick-start)|(\\.venv)|npm-cache|yarn-mirror)/.*$"
strict = true

[tool.poe.tasks]
check-format = "blue --check flatpak_node_generator tests"
check-isort = "isort --check flatpak_node_generator tests"
check-mypy = "mypy ."
check-test = "pytest -vvvs -n auto"
check = ["check-format", "check-isort", "check-mypy", "check-test"]

apply-format = "blue flatpak_node_generator"
apply-isort = "isort flatpak_node_generator"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
