[project]
name = "flatpak_node_generator"
version = "0.1.0"
description = "Script to generate Flatpak manifests from NPM and Yarn lockfiles"
license = {text = "MIT"}
readme = "README.md"
authors = [
  {name = "Ryan Gonzalez", email = "ryan.gonzalez@collabora.com"},
  {name = "Filippe LeMarchand", email = "gasinvein@gmail.com"},
]
requires-python = "<4.0,>=3.10"
dependencies = [
    "aiohttp<4.0.0,>=3.9.0",
    "pyyaml<7.0,>=6.0",
]

[tool.poetry.group.dev.dependencies]
ruff = ">=0.15,<1"
mypy = ">=1.11,<2"
pytest = ">=8,<9"
pytest-asyncio = ">=1.3.0,<2"
pytest-datadir = ">=1,<2"
pytest-httpserver = ">=1,<2"
pytest-xdist = ">=3,<4"
poethepoet = ">=0.34,<1"
types-pyyaml = ">=6.0.12.2,<7"

[tool.poetry.scripts]
flatpak-node-generator = "flatpak_node_generator.main:main"

[tool.ruff]
line-length = 88
include = ["*.py"]
target-version = "py310"

[tool.ruff.lint]
preview = true
extend-select = [
  "B",
  "ERA",
  "I",
  "PLE",
  "PLW",
  "W",
]

ignore = [
  "B011",
  "ERA001",
]



[tool.ruff.format]
line-ending = "lf"
quote-style = "single"

[tool.mypy]
python_version = "3.10"
exclude = "^(.*/)?((([^/]+)-quick-start)|(\\.venv)|npm-cache|yarn-mirror)/.*$"
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
warn_return_any = true
strict = true

[tool.poe.tasks]
check-format = "ruff format --check flatpak_node_generator tests"
check-lint = "ruff check flatpak_node_generator tests"
check-mypy = "mypy ."
check-test = "pytest -vvvs -n auto -m 'not integration'"
check-integration = "pytest -vvvs -m integration"
check = ["check-format", "check-lint", "check-mypy", "check-test"]
apply-format = "ruff format flatpak_node_generator tests"
apply-lint = "ruff check --fix flatpak_node_generator tests"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: tests requiring flatpak runtimes or SDK extensions"
]
addopts = "-m 'not integration'"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
