[project]
name = "flatpak_pip_generator"
version = "0.0.1"
description = "Tool to automatically generate flatpak-builder manifest for pip modules"
license = {text = "MIT"}
readme = "readme.md"
requires-python = "<4.0,>=3.10"
dependencies = [
    "requirements-parser<1.0.0,>=0.11.0",
    "packaging>=23.0",
]

[project.urls]
Homepage = "https://github.com/flatpak/flatpak-builder-tools/tree/master/pip"
Repository = "https://github.com/flatpak/flatpak-builder-tools.git"

[dependency-groups]
dev = [
    "mypy<2.0.0,>=1.11.2",
    "ruff<1.0.0,>=0.6.7",
    "types-pyyaml<7.0.0.0,>=6.0.12.2",
    "tomli<3.0.0.0,>=2.2.1",
]

[ruff]
line-length = 88
include = ["*.py"]
target-version = "py310"

[ruff.lint]
preview = true
extend-select = [
  "B",
  "ERA",
  "I",
  "PLE",
  "PLW",
  "W",
]

[ruff.format]
line-ending = "lf"
quote-style = "double"

[mypy]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
warn_return_any = true
